--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -19,8 +19,13 @@ spring:
     pathmatch:
       matching-strategy: ant_path_matcher
 
+  #ES
+  elasticsearch:
+    uris: http://localhost:9200/
+
 #swagger-ui界面开关 http://localhost:8090/swagger-ui/index.html
 springfox:
   documentation:
     swagger-ui:
       enabled: true
+
